tdf#122789 sw HTML import: fix handling of images with relative sizes

Relative size should have priority over image size from image headers.

(cherry picked from commit a628c01e783b8970ec6d1a4499f01981c077e607)

Change-Id: I80cce79ff87c7eb359cb292526859435cb85f929